RESOLVED FIXED 260919
[IFC] InlineFormattingContext should not cache any state
https://bugs.webkit.org/show_bug.cgi?id=260919
Summary [IFC] InlineFormattingContext should not cache any state
zalan
Reported 2023-08-30 11:21:09 PDT
ssia
Attachments
Patch (18.33 KB, patch)
2023-08-30 11:26 PDT, zalan
no flags
Patch (18.55 KB, patch)
2023-08-30 11:55 PDT, zalan
ews-feeder: commit-queue-
[fast-cq]Patch (22.71 KB, patch)
2023-08-30 12:21 PDT, zalan
no flags
zalan
Comment 1 2023-08-30 11:26:51 PDT
zalan
Comment 2 2023-08-30 11:55:31 PDT
zalan
Comment 3 2023-08-30 12:21:36 PDT
Created attachment 467499 [details] [fast-cq]Patch
EWS
Comment 4 2023-08-30 16:34:31 PDT
Committed 267472@main (a58f0004848c): <https://commits.webkit.org/267472@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 467499 [details].
Radar WebKit Bug Importer
Comment 5 2023-08-30 16:35:17 PDT
Note You need to log in before you can comment on or make changes to this bug.