[IFC] InlineFormattingContext should not cache any state https://bugs.webkit.org/show_bug.cgi?id=260919

Reviewed by Antti Koivisto.

FormattingContext classes are essentially just a collection of static-like functions with no state whatsoever.
This patch moves m_maximumIntrinsicWidthResultForSingleLine from InlineFormattingContext to InlineFormattingState.

(It is used to cache some state between preferred width computation and the subsequent line layout.)

* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/layout/formattingContexts/inline/AbstractLineBuilder.h:
(): Deleted.
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.cpp:
(WebCore::Layout::InlineFormattingContext::layout):
(WebCore::Layout::InlineFormattingContext::computedIntrinsicSizes):
(WebCore::Layout::InlineFormattingContext::createDisplayContentForLineFromCachedContent):
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingContext.h:
* Source/WebCore/layout/formattingContexts/inline/InlineFormattingState.h:
(WebCore::Layout::InlineFormattingState::setMaximumIntrinsicWidthLayoutResult):
(WebCore::Layout::InlineFormattingState::clearMaximumIntrinsicWidthLayoutResult):
(WebCore::Layout::InlineFormattingState::maximumIntrinsicWidthLayoutResult):
* Source/WebCore/layout/formattingContexts/inline/IntrinsicWidthHandler.h:
(WebCore::Layout::IntrinsicWidthHandler::maximumIntrinsicWidthResult):
(WebCore::Layout::IntrinsicWidthHandler::maximumIntrinsicWidthResult const): Deleted.
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.cpp:
(WebCore::LayoutIntegration::LineLayout::LineLayout):
(WebCore::LayoutIntegration::LineLayout::computeIntrinsicWidthConstraints):
(WebCore::LayoutIntegration::LineLayout::layout):
* Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.h:

Canonical link: https://commits.webkit.org/267472@main